<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro"
    android:background="@drawable/fundo">


    <View
        android:id="@+id/containerCadastro"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/tituloCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fraseCadastro"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toTopOf="@id/containerCadastro"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>
    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:background="@drawable/container_edit_text_login"
        android:padding="15dp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/tituloCadastro"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="@drawable/container_edit_text_login"
        android:padding="15dp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/editNome"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/container_edit_text_login"
        android:padding="15dp"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/editUsername"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:background="@drawable/container_edit_text_login"
        android:padding="15dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/editEmail"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>

    <EditText
        android:id="@+id/editSenhaConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha_confirmacao"
        android:background="@drawable/container_edit_text_login"
        android:padding="15dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/editSenha"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>
    <View
        android:id="@+id/containerBotao"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/editSenhaConfirmar"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>
    <Button
        android:id="@+id/botao_artista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/artista"
        android:textColor="@color/button_text_color"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/button_color"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/editSenhaConfirmar"
        app:layout_constraintStart_toStartOf="@id/containerBotao"/>
    <Button
        android:id="@+id/botao_ouvinte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ouvinte"
        android:backgroundTint="@color/button_color"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/button_text_color"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintTop_toBottomOf="@id/editSenhaConfirmar"
        app:layout_constraintEnd_toEndOf="@id/containerBotao"/>
    <Button
        android:id="@+id/btn_Cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="15dp"
        app:cornerRadius="30dp"
        android:layout_marginHorizontal="40dp"
        android:backgroundTint="@color/rosa"
        app:layout_constraintTop_toBottomOf="@id/containerBotao"
        app:layout_constraintStart_toStartOf="@id/containerCadastro"
        app:layout_constraintEnd_toEndOf="@id/containerCadastro"
        app:layout_constraintBottom_toBottomOf="@id/containerCadastro"/>
    
    />
    />
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="65dp"
        android:background="@color/black">
        <ImageButton
            android:id="@+id/btn_cadastro_volta_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/voltar">
        </ImageButton>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>