<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracoes"
    android:background="@color/claro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/barraNavecacao"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/black"
            android:layout_alignParentTop="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuracoes"
                android:textSize="25sp"
                android:layout_marginLeft="10sp"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    app:srcCompat="@drawable/email" />

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="18sp"
                        android:inputType="none"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:focusable="false"
                        />
                </LinearLayout>


                <Button
                    android:id="@+id/btEditarEmail"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cinza_claro"
                    android:text="@string/editar"
                    android:textColor="@color/black"
                    app:cornerRadius="15dp"
                    android:layout_marginRight="20dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >




            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    app:srcCompat="@drawable/suporte" />


                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suporte"
                        android:textSize="25sp"
                        android:layout_marginRight="70dp"
                        />
                </LinearLayout>


                <Button
                    android:id="@+id/btSac"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cinza_claro"
                    android:text="@string/sac"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:cornerRadius="15dp"
                    android:layout_marginRight="20dp"

                    />
            </LinearLayout>
            <Button
                android:id="@+id/btExcluirConta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/vermelho"
                android:text="@string/excluir_conta"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="15dp"
                android:layout_marginTop="300dp"
                />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>