<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".personalizar">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="65dp"
            android:background="@color/black">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#00FFFFFF"
                app:srcCompat="@drawable/voltar">
            </ImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalizar"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/semimagem"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/semimagem"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/alterar_foto"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:padding="10dp"
                        app:cornerRadius="30dp"
                        android:backgroundTint="@color/rosa"
                        android:layout_marginBottom="20dp"/>

                    <LinearLayout
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/container_view_personalizar"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/colecao"
                            android:textStyle="bold"
                            android:textSize="18sp"/>

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:background="@drawable/container_edit_text_personalizar"
                            android:padding="5dp"
                            android:text="@string/personalizar_frase"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:layout_marginBottom="10dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="360dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/container_view_personalizar"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:padding="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/usuario_info"
                            android:textStyle="bold"
                            android:textSize="18sp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/nome_user"
                            android:textStyle="bold"
                            android:layout_marginRight="80dp"/>
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:inputType="text"
                            android:maxLines="1"
                            android:background="@drawable/container_edit_text_personalizar"
                            android:layout_marginHorizontal="30dp"
                            app:layout_constraintTop_toBottomOf="@id/tituloCadastro"
                            app:layout_constraintStart_toStartOf="@id/containerCadastro"
                            app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="20dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:text="@string/x"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="40dp"/>
                                <EditText
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:padding="10dp"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:background="@drawable/container_edit_text_personalizar"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginLeft="40dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:text="@string/instagram"
                                    android:textStyle="bold"/>
                                <EditText
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/container_edit_text_personalizar"
                                    android:padding="10dp"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:layout_marginRight="50dp"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="20dp">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:text="@string/spotify"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="40dp"/>
                                <EditText
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:padding="10dp"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:background="@drawable/container_edit_text_personalizar"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_marginLeft="40dp">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="5dp"
                                    android:text="@string/sound_cloud"
                                    android:textStyle="bold"/>
                                <EditText
                                    android:layout_width="120dp"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/container_edit_text_personalizar"
                                    android:padding="10dp"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:layout_marginRight="50dp"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/genero"
                                android:textStyle="bold"/>
                            <EditText
                                android:layout_width="280dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/container_edit_text_personalizar"
                                android:padding="10dp"
                                android:inputType="text"
                                android:maxLines="1" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_marginTop="10dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5dp"
                                android:text="@string/biografia"
                                android:textStyle="bold"/>
                            <EditText
                                android:layout_width="280dp"
                                android:layout_height="100dp"
                                android:background="@drawable/container_edit_text_personalizar"
                                android:padding="10dp"
                                android:inputType="text"
                                android:maxLines="1"
                                android:layout_marginHorizontal="40dp"
                                app:layout_constraintTop_toBottomOf="@id/tituloCadastro"
                                app:layout_constraintStart_toStartOf="@id/containerCadastro"
                                app:layout_constraintEnd_toEndOf="@id/containerCadastro"/>
                        </LinearLayout>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/salvar"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:padding="15dp"
                            app:cornerRadius="30dp"
                            android:backgroundTint="@color/rosa"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"/>
                    </LinearLayout>


                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>